--- a/Cashify/wwwroot/index.html
+++ b/Cashify/wwwroot/index.html
@@ -9,6 +9,10 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png" />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
     <!-- Bootstrap References -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
           rel="stylesheet"
@@ -18,9 +22,12 @@
     <!-- Mudblazor CSS Styles -->
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
 
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
+
     <!-- CSS References -->
     <link rel="stylesheet" href="css/app.css" />
-    
+
     <!-- Razor Component and Views Styling -->
     <link rel="stylesheet" href="Cashify.styles.css" />
 </head>
@@ -46,5 +53,10 @@
 
     <!-- MudBlazor Scripts References -->
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+
+    <script src="https://cdn.tailwindcss.com"></script>
+
+
+
 </body>
 </html>
